# edutech_probs

SimuladorDef/: arena.js  config.js  engine.js  graph.js  index.html  main.js  styles.css  utils.js
backend/: main.py  pyproject.toml  questions.json  requirements.txt
backend/bruno_collection/probs_collection/: bruno.json  gen_problem.bru  gen_test.bru
backend/models/: question_models.py
backend/solvers/: __init__.py  binomial.py  binomial_al_menos.py  comisiones.py  defectuosos.py  esferas.py  exponencial.py  hipergeometrica.py  multinomial.py  normal_bateria.py  normal_mayor_que.py  poisson.py  poisson_exacto.py  resistores.py  torneo.py  utilidad.py  weibull.py
backend/utils/: clean_params.py  render.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: backend.js
frontend/src/components/: Card.jsx  Navbar.jsx  ParamInput.jsx
frontend/src/pages/: Generator.jsx  Home.jsx  Practice.jsx  Test.jsx  TestResolve.jsx
