[project]
name = "backend"
version = "0.1.0"
description = "edutech probability poc"
authors = [
    {name = "jdvanegasm",email = "jdvanegasm@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all] (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
